[tool.poetry]
name = "dspytests"
version = "0.1.0"
description = "Tests of the new dspy LLM framework to determine how useful it is"
authors = ["Dave Rench McCauley <11720378+emigre459@users.noreply.github.com>"]
license = "Apache v2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^0.5.1"
click = "^8.1.7"
Sphinx = "*"
coverage = "^7.3.2"
awscli = "^1.31.13"
flake8 = "^6.1.0"
dspy-ai = "^2.0.7"
pandas = "*"
rich = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
